cambios y comienza presentacion

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-main.aux
-main.dvi
-main.lof
-main.log
-main.lot
-main.out
-main.toc
+*.aux
+*.dvi
+*.lof
+*.log
+*.lot
+*.out
+*.toc
 main.pdf
-main.bbl
-main.bgl
-main.blg
-main.synctex.gz
+*.bbl
+*.bgl
+*.blg
+*.synctex.gz
 texput.log
 titlesec.sty
 *.backup
